# habits-tracking

./: .gitignore  Pipfile  README.md  brain_storming.md
habit_backend/: Pipfile  README.md  exception.py  exception_handler.py  habit.db  habit_empty.db  habit_template.db  htr.db  main.py
habit_backend/app/: config.py  exception.py  exception_handler.py
habit_backend/app/db/: __init__.py  client.py
habit_backend/app/routers/: __init__.py  habit.py  habit_event.py  user.py
habit_backend/app/schemas/: __init__.py  habit.py  habit_event.py  user.py
habit_backend/app/service/: __init__.py  (+1 more)
habit_backend/db/: client.py
habit_backend/models/: create_tables.py
habit_backend/routers/: habit.py  habit_event.py  routers.py  user.py
habit_backend/routes/: routers.py
habit_backend/schemas/: habit.py  habit_event.py  habits.py  user.py
habit_backend/service/: habit.py  habit_tracker.py
habit_backend/tests/: conftests.py
habit_cli/: setup.py
habit_cli/htr/: main.py
habit_frontend/: Pipfile  README.md  main.py  pyproject.toml  setup.py
habit_frontend/htr/: analytics.py  main.py
habit_frontend/htr/analytics/: __init__.py  analytics.py
habit_frontend/htr/cli/: __init__.py  cli.py  habit.py  statistic.py  streak.py  user.py
habit_frontend/htr/client/: habit_tracker.py
habit_frontend/htr/schemas/: __init__.py  habit.py  habit_event.py  user.py
habit_frontend/tests/integration_tests/: conftest.py  test_analytic_cli.py  test_habit_cli.py  test_user_cli.py
habit_frontend/tests/unit_tests/: conftest.py  test_streak.py  test_user_requests.py
(+8 files in other folders)
